# benchmark

./: ,gitignore  .gitignore  Dockerfile  LICENSE  README.md  benchmark.py  benchmark.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh  script.json  script.json.template
.metals/: metals.lock.db
benchmark/: __init__.py  benchmark.py  cli.py  config.py
benchmark/server/: app.py
benchmark/services/: benchmark.py  contract.py  dogefuzz.py  drive.py  progress.py  queue.py  result.py  script.py  server.py
benchmark/shared/: constants.py  exceptions.py  singleton.py  testing.py  utils.py
benchmark/shared/dogefuzz/: api.py  client.py  exceptions.py
benchmark/utils/: time.py
resources/: contracts.csv
resources/contracts/: CBToken.sol  CvcProxy.sol  DSProxy.sol  FNBToken.sol  KnowledgeProxy.sol  LANDProxy.sol  MultiEventsHistory.sol  MultiSigStub.sol  Parsec.sol  RiskSharingToken.sol  TransferReg.sol  UserWallet.sol
resources/contracts/delegate_dangerous/: Ciphs.sol
