[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Ismael Medeiros <ismaelmedeiros@unb.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "0.5.0"
python-dotenv = "^0.21.1"
tqdm = "^4.64.1"
flask = "^2.2.2"
requests = "^2.28.2"
gdown = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
benchmark = "benchmark:main"